--- a/students/albert_chun.html
+++ b/students/albert_chun.html
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>From lifting weights to building code</h3>
                 </div>
               </li>
             </ul>
@@ -148,8 +148,7 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Penn State</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +157,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>Krossover</h4>
                 <p>
-                  Blurb about company...
+                  Sales Director
                 </p>
               </div>
             </div>
@@ -176,7 +175,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/asc5025" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
                 <div class="column fourth">
@@ -226,7 +225,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
+                      - <a href="https://github.com/asc5025.github.io">Personal Blog</a><br>
                       - <a href="#">Tumblr</a><br>
                     </p>
                   </div>
@@ -273,9 +272,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://www.espn.com">Espn</a><br>
+                    - Favorite Other Site: <a href="https://www.teamusa.org/usa-weightlifting">USA Weightlifting</a><br>
+                    - Favorite Radio Program: <a href="#">Morgan Freeman Narrating My Life</a><br>
                   </p>
                 </div>
               </div>
