--- a/students/max_petersen.html
+++ b/students/max_petersen.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/max_background.png) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -94,18 +94,18 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/max_profile.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Max Petersen</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://twitter.com/max_a_milli0n"><i class="icon-twitter ib-social-icons"></i></a>
+          <a href="https://linkedin.com/in/max-petersen"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/Master-Max"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>I don't think I have the right shoes for a runtime error...</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,8 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  Greetings reader, I'm Max. You know that old school nerd. That one who has a keyboard that's loud and klacky, probably plays D&D regularly,
+                  and relates way too much to those kids from Stranger Things. Well I'm his nephew that he really gets along with.
                 </p>
               </div>
             </div>
@@ -148,8 +149,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>AS in CS from Landmark College</li>
+
                 </ul>
               </div>
             </div>
@@ -158,9 +159,13 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>Ohmnii. LLC</h4>
                 <p>
-                  Blurb about company...
+                  Founder
+                </p>
+                <h4>CSDNet</h4>
+                <p>
+                  Tech
                 </p>
               </div>
             </div>
@@ -226,7 +231,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
+                      - <a href="https://Master-Max.github.io">Personal Blog</a><br>
                       - <a href="#">Tumblr</a><br>
                     </p>
                   </div>
@@ -273,9 +278,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="reddit.com">Reddit</a><br>
+                    - Other Website: <a href="youtube.com">YouTube</a><br>
+                    - Favorite Comic: <a href="xkcd.com">XKCD</a><br>
                   </p>
                 </div>
               </div>
@@ -350,7 +355,7 @@
     </div>
   </div>
   <!-- End Footer -->
-  
+
   <script type='text/javascript' src="../js/jquery.js"></script>
   <script type='text/javascript' src="../js/smooth-scroll.js"></script>
   <script type="text/javascript">
